// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mount a Parent component 1`] = `
<div>
  <ul>
    <li><strong>Iron Man</strong></li>
    <li><strong>Avengers</strong></li>
    <li><strong>Infitinity War</strong></li>
  </ul>
</div>
`;

exports[`Shallow mount a Parent component 1`] = `
<div>
  <ul>
    <listitem-stub movie="Iron Man"></listitem-stub>
    <listitem-stub movie="Avengers"></listitem-stub>
    <listitem-stub movie="Infitinity War"></listitem-stub>
  </ul>
</div>
`;

exports[`mount a vue component 1`] = `
<div>
  <h1>Hello Faizan Arif</h1>
</div>
`;
